Use realy name, not all uppercase

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -56,7 +56,7 @@
             <a href="{{site.data.svbtle.website_url}}" 
             style="background-image: url({{site.data.svbtle.profile_picture}});">Profile Picture</a> 
           </figure>
-          <h1 class="profile-name is-uppercase">
+          <h1 class="profile-name">
             <a href="{{site.data.svbtle.profile_url}}">{{site.data.svbtle.profile_name}}</a>
           </h1>
           <h2 class="subtitle">{{site.data.svbtle.subtitle}}</h2>
