no uppercase again

--- a/_layouts/detail.html
+++ b/_layouts/detail.html
@@ -42,7 +42,7 @@
   <body style="zoom: 1;">
     <div class="main-container">
       
-      <div class="mlogotype is-uppercase">
+      <div class="mlogotype">
         <a href="{{site.data.svbtle.website_url}}">{{site.data.svbtle.website_name}}</a>
       </div>
 
