--- a/_layouts/detail.html
+++ b/_layouts/detail.html
@@ -130,7 +130,7 @@
         <div class="about">
           <ul class="about-links">
             <li>
-              <a href="#">
+              <a href="/feeds">
                 <span class="tag">RSS</span>
               </a>
             </li>
