--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -300,13 +300,14 @@ article:nth-child(3)::before,
 
 .post .highlight {
 	max-width: 550px;
+	display: block;
+        width: auto;
+        overflow: auto;
 	text-align: justify;
 	background-color: rgb(248, 248, 248);
 	color: black;
 	border: 1px solid rgba(144, 144, 144, .3);
         border-radius:3px;
-        padding:6px 10px;
-        word-wrap: break-word;
 }
 
 .post *,
@@ -389,6 +390,14 @@ article::before {
 .highlight pre code {
 	background: none;
 	border: none;
+	margin: 5px 5px;
+        max-width: 550px;
+	display: block;
+        width: auto;
+        overflow: auto;
+        white-space: pre-wrap;
+        word-wrap: break-word;
+        word-break: break-all;
 }
 
 .instapaper {
@@ -768,11 +777,10 @@ nav.pagination span.next {
 }
 
 .post pre {
-  max-width: 550px;
+        max-width: 550px;
 	background-color: transparent;
 	border: none;
-	margin: 15px auto;
-  width: 100%;
+        width: auto;
 }
 
 .post.detail-view code {
